# magnetic_declination_converter

./: CMakeLists.txt  README.md  package.xml
include/magnetic_declination_converter/: orientation_converter.hpp
launch/: magnetic_correction.launch
src/: main.cpp  orientation_converter.cpp
